--- a/src/ListDialog/CultivarListDialog.form
+++ b/src/ListDialog/CultivarListDialog.form
@@ -45,9 +45,9 @@
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="0">
                 <Column editable="false" title="Crop Code" type="java.lang.String"/>
+                <Column editable="false" title="Crop Name" type="java.lang.String"/>
                 <Column editable="false" title="Cultivar Code" type="java.lang.String"/>
-                <Column editable="false" title="Cultivar Code" type="java.lang.String"/>
-                <Column editable="false" title="Cultivar" type="java.lang.String"/>
+                <Column editable="false" title="Cultivar Name" type="java.lang.String"/>
               </Table>
             </Property>
           </Properties>
