--- a/src/xbuild/TreatmentFrame.form
+++ b/src/xbuild/TreatmentFrame.form
@@ -91,8 +91,11 @@
         <Component class="org.jdesktop.swingx.JXTable" name="jXTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="15" rowCount="0">
+              <Table columnCount="18" rowCount="0">
                 <Column editable="false" title="Level" type="java.lang.Object"/>
+                <Column editable="true" title="&lt;html&gt;Rot.&lt;br&gt;Number&lt;/html&gt;" type="java.lang.Object"/>
+                <Column editable="true" title="&lt;html&gt;Rot.&lt;br&gt;Option&lt;/html&gt;" type="java.lang.Object"/>
+                <Column editable="true" title="&lt;html&gt;Crop&lt;br&gt;Comp.&lt;/html&gt;" type="java.lang.Object"/>
                 <Column editable="true" title="Description" type="java.lang.Object"/>
                 <Column editable="false" title="Cultivar" type="java.lang.Object"/>
                 <Column editable="false" title="Field" type="java.lang.Object"/>
